--- a/msp.ipynb
+++ b/msp.ipynb
@@ -236,14 +236,7 @@
    "source": [
     "\n",
     "modelB6 = regression(*(X,Y,X**2,Y**2,Y*X))\n",
-    "models['B6']=modelB6\n",
-    "\n",
-    "F = np.column_stack((X,Y,X**2,Y**2,Y*X))\n",
-    "F = sm.add_constant(F)\n",
-    "H = np.dot(np.transpose(F),F)\n",
-    "G = np.dot(np.transpose(F),Z)\n",
-    "B = np.dot(np.linalg.inv(H),G)\n",
-    "print(B)\n"
+    "models['B6']=modelB6\n"
    ]
   },
   {
@@ -595,30 +588,41 @@
    "source": [
     "# Hypotézy pre model Z = B1 + B2X + B3Y + B4X^2 + B5Y^2 + B6XY :\n",
     "1. H: B6 = 0 HA: B6 != 0\n",
-    "2. H: B5 = 0 HA: B5 != 0\n",
-    "\n",
-    "testovacie kritérium t = (bj - Bj0)/(s*srqt(vjj))"
+    "2. H: B5 = 0 HA: B5 != 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Testovacie kriterium t: -0.26437354700664406\n",
+      "[-6.663969214929865e-17, 6.663969214929865e-17]\n",
       "[-0.52932468  1.84517706  0.59757098 10.27504542  1.60115024 -0.26437355]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "T_test = models['B6'].tvalues\n",
+    "F = np.column_stack((X,Y,X**2,Y**2,Y*X))\n",
+    "F = sm.add_constant(F)\n",
+    "V = np.linalg.inv(np.dot(np.transpose(F),F))\n",
+    "v_66 = V[5][5]\n",
+    "\n",
+    "s = math.sqrt(modelB6.scale) # Smin/(n-m)\n",
+    "t = modelB6.params[5]/(s*math.sqrt(V[5][5])) # (bj - Bj0)/(s*srqt(vjj))\n",
+    "print(f'Testovacie kriterium t: {modelB6.tvalues[5]}')\n",
+    "W_alpha_bar = [-sp.t.ppf(0.5, modelB6.df_resid), +sp.t.ppf(0.5, modelB6.df_resid)]\n",
+    "print(W_alpha_bar)\n",
+    "\n",
+    "T_test = modelB6.tvalues\n",
     "print(T_test)\n",
     "\n",
-    "t = (models['B6'].params[5])"
+    "t = (modelB6.params[5])"
    ]
   }
  ],
