--- a/msp.ipynb
+++ b/msp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 2,
    "metadata": {
     "id": "7lRu-00_Wqn2"
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +116,7 @@
     "k = 8\n",
     "p = 1/k\n",
     "\n",
-    "def test_dobrej_zhody(df, row, p):\n",
-    "    df = df.loc[[row]].rename(index={row:'ni'})\n",
+    "def test_dobrej_zhody(df, p):\n",
     "    n = df.loc['ni'].sum(axis=0) # n \n",
     "    df.loc['p_i'] = df.loc['ni']/n # skutocna pravdepodobnost\n",
     "    df.loc['p_t'] = p # teoreticka pravdepodobnost\n",
@@ -129,15 +128,15 @@
     "\n",
     "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
     "print('A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas')\n",
-    "H_A = test_dobrej_zhody(df, 'zimni', p )\n",
+    "H_A = test_dobrej_zhody( df.loc[['zimni']].rename(index={'zimni':'ni'}), p )\n",
     "print(f'Chi2: {H_A}')\n",
     "print(f'Hypotezu zamietame: {H_A>chi_square_alpha}')\n",
     "print('B) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují letní čas.')\n",
-    "H_B = test_dobrej_zhody(df, 'letni', p )\n",
+    "H_B = test_dobrej_zhody(df.loc[['letni']].rename(index={'letni':'ni'}), p )\n",
     "print(f'Chi2: {H_B}')\n",
     "print(f'Hypotezu zamietame: {H_B>chi_square_alpha}')\n",
     "print('C) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují striedanie času.')\n",
-    "H_C = test_dobrej_zhody(df, 'striedanie', p )\n",
+    "H_C = test_dobrej_zhody(df.loc[['striedanie']].rename(index={'striedanie':'ni'}), p )\n",
     "print(f'Chi2: {H_C }')\n",
     "print(f'Hypotezu zamietame: {H_C >chi_square_alpha}')"
    ]
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,11 +182,11 @@
     "\n",
     "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
     "print('D) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas.')\n",
-    "H_d = test_dobrej_zhody(df2, 'zimni', p )\n",
+    "H_d = test_dobrej_zhody(df2.loc[['zimni']].rename(index={'zimni':'ni'}), p )\n",
     "print(f'Chi2: {H_d}')\n",
     "print(f'Hypotezu zamietame: {H_d>chi_square_alpha}')\n",
     "print('E) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel.')\n",
-    "H_e = test_dobrej_zhody(df2, 'jedno', p )\n",
+    "H_e = test_dobrej_zhody(df2.loc[['jedno']].rename(index={'jedno':'ni'}), p )\n",
     "print(f'Chi2: {H_e}')\n",
     "print(f'Hypotezu zamietame: {H_e>chi_square_alpha}')"
    ]
@@ -203,49 +202,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2308\n",
-      "[24.23288251]\n",
-      "Doplnok kritickeho oboru: [0, 2.9996291033771145]\n",
-      "[10.40175666]\n",
-      "1334\n",
-      "Doplnok kritickeho oboru: [0, 3.002485010635344]\n",
-      "[7.84706364]\n",
-      "741\n",
-      "Doplnok kritickeho oboru: [0, 3.0079256983885276]\n"
+      "2112.577157465138\n",
+      "1140.9447162505728\n",
+      "552.119067112225\n"
      ]
     }
    ],
    "source": [
     "df_a = df[['vacsie mesta','Okolí']]\n",
-    "n = df_a.values.sum()\n",
-    "print(n)\n",
-    "(f, pvalue) = sp.f_oneway(df_a[['vacsie mesta']], df_a[['Okolí']], axis=0)\n",
-    "print(f)\n",
-    "F = sp.f.ppf(1-alpha,3-1,n-3)\n",
-    "print(f'Doplnok kritickeho oboru: {[0,F]}')\n",
+    "def chi_test(a,b):\n",
+    "    a = a.squeeze()\n",
+    "    b = b.squeeze()\n",
+    "    n = a.values.sum() # n \n",
+    "    n += b.values.sum()\n",
+    "    diff = ((b-a)**2)/a\n",
+    "    return diff.values.sum()\n",
     "\n",
-    "df_a = df[['mensie mesta','Okolí']]\n",
-    "(f, pvalue) = sp.f_oneway(df_a[['mensie mesta']], df_a[['Okolí']], axis=0)\n",
-    "print(f)\n",
-    "n = df_a.values.sum()\n",
-    "print(n)\n",
-    "F = sp.f.ppf(1-alpha,3-1,n-3)\n",
-    "print(f'Doplnok kritickeho oboru: {[0,F]}')\n",
-    "\n",
-    "df_a = df[['obce','Okolí']]\n",
-    "(f, pvalue) = sp.f_oneway(df_a[['obce']], df_a[['Okolí']], axis=0)\n",
-    "print(f)\n",
-    "n = df_a.values.sum()\n",
-    "print(n)\n",
-    "F = sp.f.ppf(1-alpha,3-1,n-3)\n",
-    "print(f'Doplnok kritickeho oboru: {[0,F]}')\n"
+    "print(chi_test(df[['vacsie mesta']], df[['Okolí']]))\n",
+    "print(chi_test(df[['mensie mesta']], df[['Okolí']]))\n",
+    "print(chi_test(df[['obce']], df[['Okolí']]))\n"
    ]
   },
   {
