--- a/msp.ipynb
+++ b/msp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "id": "7lRu-00_Wqn2"
    },
@@ -27,6 +27,7 @@
     "import statsmodels.stats.gof as smg\n",
     "import matplotlib.pyplot as plt\n",
     "from statsmodels.stats.diagnostic import normal_ad\n",
+    "from statsmodels.stats.proportion import test_proportions_2indep\n",
     "from matplotlib import cm\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import math\n",
@@ -41,16 +42,12 @@
     "id": "RZOXUL3FyAxF"
    },
    "source": [
-    "# Úloha 1\n",
-    "\n",
-    "IDK ASI ANOVA na posledne jednofaktorova podla mesta \\\\\n",
-    "a na prve test dobrej zhody\n",
-    "Hypotéza: p1 = p2 = ... = pk = p ku HA: Ej, pj != p"
+    "# Úloha 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +59,14 @@
       "letni         352   284     185     178      87           58               65   \n",
       "striedanie    257   178     124      78      44           33               31   \n",
       "jedno         208   129      70      74       6           19               32   \n",
+      "total        1327   915     681     587     284          176              215   \n",
       "\n",
-      "            Okolí  \n",
-      "zimni           9  \n",
-      "letni          30  \n",
-      "striedanie     20  \n",
-      "jedno           7  \n"
+      "            Okolí   sum  \n",
+      "zimni           9  1702  \n",
+      "letni          30  1239  \n",
+      "striedanie     20   765  \n",
+      "jedno           7   545  \n",
+      "total          66  4251  \n"
      ]
     }
    ],
@@ -78,6 +77,8 @@
     "\n",
     "df = pd.DataFrame.from_dict(data, orient='index', columns=['Praha', 'Brno', 'Znojmo',\n",
     "                            'Tišnov', 'Paseky', 'Horní Lomná','Dolní Věstonice','Okolí' ])\n",
+    "df.loc['total'] = df.sum(axis=0)\n",
+    "df['sum'] = df.sum(axis=1)\n",
     "print(df)"
    ]
   },
@@ -85,6 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Test dobrej zhody\n",
+    "Hypotéza: p1 = p2 = ... = pk = p k HA: Ej, pj != p\n",
+    "\n",
     "a) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas \\\n",
     "b) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují letní čas. \\\n",
     "c) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují střídání času."
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -100,43 +104,48 @@
      "output_type": "stream",
      "text": [
       "Doplnok kritickeho oboru: [0, 14.067140449340169]\n",
-      "A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas\n",
-      "Chi2: 911.132784958872\n",
-      "Hypotezu zamietame: True\n",
-      "B) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují letní čas.\n",
-      "Chi2: 611.0532687651332\n",
-      "Hypotezu zamietame: True\n",
-      "C) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují striedanie času.\n",
-      "Chi2: 527.3294117647059\n",
-      "Hypotezu zamietame: True\n"
+      "A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "For each axis slice, the sum of the observed frequencies must agree with the sum of the expected frequencies to a relative tolerance of 1e-08, but the percent differences are:\n0.0025685013378009313",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_183478/3965444399.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Doplnok kritickeho oboru: {[0,chi_square_alpha]}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mH_A\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_dobrej_zhody\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'zimni'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Chi2: {H_A}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Hypotezu zamietame: {H_A>chi_square_alpha}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_183478/3965444399.py\u001b[0m in \u001b[0;36mtest_dobrej_zhody\u001b[0;34m(df, row)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mobserved\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobserved\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexpected\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobserved\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# remove sum column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mchis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchisquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobserved\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# vypocet chi**2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.10/site-packages/scipy/stats/_stats_py.py\u001b[0m in \u001b[0;36mchisquare\u001b[0;34m(f_obs, f_exp, ddof, axis)\u001b[0m\n\u001b[1;32m   7309\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7310\u001b[0m     \"\"\"\n\u001b[0;32m-> 7311\u001b[0;31m     return power_divergence(f_obs, f_exp=f_exp, ddof=ddof, axis=axis,\n\u001b[0m\u001b[1;32m   7312\u001b[0m                             lambda_=\"pearson\")\n\u001b[1;32m   7313\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.10/site-packages/scipy/stats/_stats_py.py\u001b[0m in \u001b[0;36mpower_divergence\u001b[0;34m(f_obs, f_exp, ddof, axis, lambda_)\u001b[0m\n\u001b[1;32m   7151\u001b[0m                    \u001b[0;34mf\"of {rtol}, but the percent differences are:\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7152\u001b[0m                    f\"{relative_diff}\")\n\u001b[0;32m-> 7153\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7154\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7155\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: For each axis slice, the sum of the observed frequencies must agree with the sum of the expected frequencies to a relative tolerance of 1e-08, but the percent differences are:\n0.0025685013378009313"
      ]
     }
    ],
    "source": [
-    "k = 8\n",
-    "p = 1/k\n",
     "\n",
-    "def test_dobrej_zhody(df, p):\n",
-    "    n = df.loc['ni'].sum(axis=0) # n \n",
-    "    df.loc['p_i'] = df.loc['ni']/n # skutocna pravdepodobnost\n",
-    "    df.loc['p_t'] = p # teoreticka pravdepodobnost\n",
-    "    df.loc['n_t'] = n*p # teoreticka cetnost\n",
-    "    (chis,pval) = sp.chisquare(df.loc['ni'], df.loc['n_t']) # vypocet chi**2\n",
+    "def test_dobrej_zhody(df,row):\n",
+    "    p_row = df.loc[row]['sum']/df.loc['total']['sum']\n",
+    "    expected = df.loc['total'] * p_row\n",
+    "    observed = df.loc[row]\n",
+    "    expected, observed = expected[:-1], observed[:-1] # remove sum column\n",
+    "    (chis,pval) = sp.chisquare(observed, expected) # vypocet chi**2\n",
     "    return chis\n",
     "\n",
+    "k = 8\n",
     "chi_square_alpha = sp.chi2.ppf(1-alpha,k-1)\n",
     "\n",
     "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
     "print('A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas')\n",
-    "H_A = test_dobrej_zhody( df.loc[['zimni']].rename(index={'zimni':'ni'}), p )\n",
+    "H_A = test_dobrej_zhody( df, 'zimni')\n",
     "print(f'Chi2: {H_A}')\n",
     "print(f'Hypotezu zamietame: {H_A>chi_square_alpha}')\n",
     "print('B) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují letní čas.')\n",
-    "H_B = test_dobrej_zhody(df.loc[['letni']].rename(index={'letni':'ni'}), p )\n",
+    "H_B = test_dobrej_zhody( df, 'letni')\n",
     "print(f'Chi2: {H_B}')\n",
     "print(f'Hypotezu zamietame: {H_B>chi_square_alpha}')\n",
     "print('C) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují striedanie času.')\n",
-    "H_C = test_dobrej_zhody(df.loc[['striedanie']].rename(index={'striedanie':'ni'}), p )\n",
+    "H_C = test_dobrej_zhody( df, 'striedanie')\n",
     "print(f'Chi2: {H_C }')\n",
     "print(f'Hypotezu zamietame: {H_C >chi_square_alpha}')"
    ]
@@ -146,25 +155,57 @@
    "metadata": {},
    "source": [
     "#### Pre nasledujúce hypotézy, je potrebné vytvoriť z existujúcich tried, nové triedy a to, triedy vačšie mestá, menšie mestá a obce.\n",
+    "\n",
+    "Použijeme 2vyberový test pre binomické rozdelenie, teda dostaneme try hypotezy:\n",
+    "H: pv = pm\n",
+    "H: pv = po\n",
+    "H: pm = po\n",
+    "kde pv = pravdepodobnost u väčších miest, pm = pravdepodobnosť u menších miest, po = pravdepodobnosť v obciach\n",
+    "\n",
     "d) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas. \\\n",
     "e) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel. \\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Doplnok kritickeho oboru: [0, 5.991464547107979]\n",
+      "Doplnok <-u_1-alpha/2,u_1-alpha/2> [-0.959963984540054, 1.959963984540054]\n",
+      "D)\n",
+      "Väčšie mesta = menšie mestá: True pre t = -0.056998710810539296\n",
+      "Väčšie mesta = obce: True pre t = -0.06043624141168527\n",
+      "Menšie mestá = obce: True pre t = -0.0032021280093444847\n",
+      "Hypotézu nezamietame\n",
+      "E)\n",
+      "Väčšie mesta = menšie mestá: True pre t = 0.013961501450230503\n",
+      "Väčšie mesta = obce: True pre t = 0.02171127787518878\n",
+      "Menšie mestá = obce: True pre t = 0.009363809580875857\n",
+      "Hypotézu nezamietame\n",
+      "Doplnok kritickeho oboru: [0, 14.067140449340169]\n",
       "D) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas.\n",
-      "Chi2: 252.72415829887774\n",
-      "Hypotezu zamietame: True\n",
+      "vacsie mesta    900.723102\n",
+      "mensie mesta    509.418775\n",
+      "obce            271.181130\n",
+      "Name: total, dtype: float64 vacsie mesta    834\n",
+      "mensie mesta    559\n",
+      "obce            300\n",
+      "Name: zimni, dtype: int64\n",
+      "Chi2: 12.830985547539807\n",
+      "Hypotezu zamietame: False\n",
       "E) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel.\n",
-      "Chi2: 229.02973977695171\n",
+      "vacsie mesta    287.694175\n",
+      "mensie mesta    162.710176\n",
+      "obce             86.616221\n",
+      "Name: total, dtype: float64 vacsie mesta    337\n",
+      "mensie mesta    144\n",
+      "obce             57\n",
+      "Name: jedno, dtype: int64\n",
+      "Chi2: 20.728183413532662\n",
       "Hypotezu zamietame: True\n"
      ]
     }
@@ -176,17 +217,51 @@
     "df['mensie mesta'] = df['Znojmo'] + df['Tišnov']\n",
     "df['obce'] = df['Paseky'] + df['Horní Lomná'] + df['Dolní Věstonice']\n",
     "\n",
-    "df2 = df[['vacsie mesta','mensie mesta','obce']]\n",
+    "df2 = df[['vacsie mesta','mensie mesta','obce']].copy()\n",
     "\n",
-    "chi_square_alpha = sp.chi2.ppf(1-alpha,k-1)\n",
+    "\n",
+    "def test_bin(df1, df2, row, doplnok, hypothesis):\n",
+    "    x = df1.loc[row]\n",
+    "    y = df2.loc[row]\n",
+    "    n = df1.loc['total']\n",
+    "    m = df2.loc['total']\n",
+    "\n",
+    "    f = (x+y)/(n+m)\n",
+    "    t = ((x/n)-(y/m))/(math.sqrt(f*(1-f))) * math.sqrt(((x*y)/(n*m)))\n",
+    "\n",
+    "    print(f'{hypothesis}: {t >= doplnok[0] and t <= doplnok[1]} pre t = {t}')\n",
+    "    return t\n",
+    "\n",
+    "u = sp.norm.ppf(1-alpha/2)\n",
+    "doplnok = [1-u, u]    \n",
+    "\n",
+    "print('Doplnok <-u_1-alpha/2,u_1-alpha/2>', doplnok)\n",
+    "print('D)')\n",
+    "H_vm = test_bin(df['vacsie mesta'], df['mensie mesta'],'zimni', doplnok,'Väčšie mesta = menšie mestá' )\n",
+    "H_vo = test_bin(df['vacsie mesta'], df['obce'],'zimni', doplnok,'Väčšie mesta = obce' )\n",
+    "H_mo = test_bin(df['mensie mesta'], df['obce'],'zimni', doplnok,'Menšie mestá = obce' )\n",
+    "H_D = 'Hypotézu nezamietame' if (H_vm >= doplnok[0] and H_vm <= doplnok[1] and \n",
+    "    H_vo >= doplnok[0] and H_vo <= doplnok[1] and \n",
+    "    H_mo >= doplnok[0] and H_mo <= doplnok[1]) else 'Hypotézu zamietame'\n",
+    "print(H_D)\n",
+    "\n",
+    "print('E)')\n",
+    "H_vm = test_bin(df['vacsie mesta'], df['mensie mesta'],'jedno', doplnok,'Väčšie mesta = menšie mestá' )\n",
+    "H_vo = test_bin(df['vacsie mesta'], df['obce'],'jedno', doplnok,'Väčšie mesta = obce' )\n",
+    "H_mo = test_bin(df['mensie mesta'], df['obce'],'jedno', doplnok,'Menšie mestá = obce' )\n",
+    "H_E = 'Hypotézu nezamietame' if (H_vm >= doplnok[0] and H_vm <= doplnok[1] and \n",
+    "    H_vo >= doplnok[0] and H_vo <= doplnok[1] and \n",
+    "    H_mo >= doplnok[0] and H_mo <= doplnok[1]) else 'Hypotézu zamietame'\n",
+    "print(H_E)\n",
     "\n",
     "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
     "print('D) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení obyvatel, co preferují zimní čas.')\n",
-    "H_d = test_dobrej_zhody(df2.loc[['zimni']].rename(index={'zimni':'ni'}), p )\n",
+    "df2['sum'] = df.sum(axis=1)\n",
+    "H_d = test_dobrej_zhody(df2, 'zimni')\n",
     "print(f'Chi2: {H_d}')\n",
     "print(f'Hypotezu zamietame: {H_d>chi_square_alpha}')\n",
     "print('E) U větších měst, menších měst a obcí (3. průzkumy) je stejné procentuální zastoupení nerozhodnutelných obyvatel.')\n",
-    "H_e = test_dobrej_zhody(df2.loc[['jedno']].rename(index={'jedno':'ni'}), p )\n",
+    "H_e = test_dobrej_zhody(df2, 'jedno')\n",
     "print(f'Chi2: {H_e}')\n",
     "print(f'Hypotezu zamietame: {H_e>chi_square_alpha}')"
    ]
