--- a/msp.ipynb
+++ b/msp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 212,
    "metadata": {
     "id": "7lRu-00_Wqn2"
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
       "striedanie           435           202   108   745\n",
       "jedno                337           144    57   538\n",
       "total               2242          1268   675  4185\n",
-      "BinomTestResult(k=834, n=2242, alternative='two-sided', proportion_estimate=0.3719892952720785, pvalue=0.0016777807574738352) BinomTestResult(k=559, n=1268, alternative='two-sided', proportion_estimate=0.44085173501577285, pvalue=0.009202363386745011) BinomTestResult(k=300, n=675, alternative='two-sided', proportion_estimate=0.4444444444444444, pvalue=0.03761315312668648) BinomTestResult(k=9, n=66, alternative='two-sided', proportion_estimate=0.13636363636363635, pvalue=3.8039723032054143e-06)\n"
+      "BinomTestResult(k=834, n=2242, alternative='two-sided', proportion_estimate=0.3719892952720785, pvalue=0.0016777807574738352) BinomTestResult(k=559, n=1268, alternative='two-sided', proportion_estimate=0.44085173501577285, pvalue=0.009202363386745011) BinomTestResult(k=300, n=675, alternative='two-sided', proportion_estimate=0.4444444444444444, pvalue=0.03761315312668648)\n"
      ]
     }
    ],
@@ -256,10 +256,8 @@
     "a = sp.binomtest(df2.loc['zimni']['vacsie mesta'], df2.loc['total']['vacsie mesta'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
     "b = sp.binomtest(df2.loc['zimni']['mensie mesta'], df2.loc['total']['mensie mesta'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
     "c = sp.binomtest(df2.loc['zimni']['obce'], df2.loc['total']['obce'], df2.loc['zimni']['sum']/df2.loc['total']['sum'])\n",
-    "d = sp.binomtest(df.loc['zimni']['Okolí'], df.loc['total']['Okolí'], df.loc['zimni']['sum']/df.loc['total']['sum'])\n",
     "\n",
-    "print(a,b,c,d)\n",
-    "print(a.proportion_ci(confidence_level=0.95))"
+    "print(a,b,c)"
    ]
   },
   {
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +286,42 @@
       "False\n",
       "Obec?\n",
       "Doplnok: [-1.9631749170926294, 1.9631749170926294], t: 2.835176276918267\n",
-      "False\n"
+      "False\n",
+      "Doplnok kritickeho oboru: [0, 7.814727903251179]\n",
+      "A) V městech, obcích a v okolí studenta (8. průzkumů) je stejné procentuální zastoupení obyvatel, co preferují zimní čas\n",
+      "zimni         0.371989\n",
+      "letni         0.283675\n",
+      "striedanie    0.194023\n",
+      "jedno         0.150312\n",
+      "total         1.000000\n",
+      "Name: vacsie mesta, dtype: float64\n",
+      "21.545258133922857\n",
+      "zimni         0.440852\n",
+      "letni         0.286278\n",
+      "striedanie    0.159306\n",
+      "jedno         0.113565\n",
+      "total         1.000000\n",
+      "Name: mensie mesta, dtype: float64\n",
+      "28.998487965551185\n",
+      "zimni         0.444444\n",
+      "letni         0.311111\n",
+      "striedanie    0.160000\n",
+      "jedno         0.084444\n",
+      "total         1.000000\n",
+      "Name: obce, dtype: float64\n",
+      "27.263186375028475\n",
+      "zimni         0.136364\n",
+      "letni         0.454545\n",
+      "striedanie    0.303030\n",
+      "jedno         0.106061\n",
+      "total         1.000000\n",
+      "Name: Okolí, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "df_a = df[['vacsie mesta','mensie mesta','obce', 'Okolí']].copy()\n",
-    "\n",
+    "df_a['sum'] = df_a.sum(axis=1)\n",
     "def t_test(a,b):\n",
     "    n = (a + b).loc['total']\n",
     "    a, b = a[:-1], b[:-1]\n",
@@ -309,7 +336,28 @@
     "t_test(df_a['mensie mesta'], df_a['Okolí'])\n",
     "print('Obec?')\n",
     "t_test(df_a['obce'], df_a['Okolí'])\n",
-    "\n"
+    "\n",
+    "\n",
+    "#moznost dva\n",
+    "k = 4\n",
+    "\n",
+    "chi_square_alpha = sp.chi2.ppf(1-alpha,k-1)\n",
+    "\n",
+    "print(f'Doplnok kritickeho oboru: {[0,chi_square_alpha]}')\n",
+    "#H_A = test_dobrej_zhody( df_a, 'zimni')\n",
+    "def chi2(df, row):\n",
+    "    p_row = df[row]/df.loc['total'][row]\n",
+    "    expected = p_row*df.loc['total']['Okolí']\n",
+    "    print(p_row)\n",
+    "    observed = df['Okolí']\n",
+    "    expected, observed = expected[:-1], observed[:-1] # remove sum column\n",
+    "    (chis,pval) = sp.chisquare(observed, expected) # vypocet chi**2\n",
+    "    return chis\n",
+    "\n",
+    "print(chi2(df_a, 'vacsie mesta'))\n",
+    "print(chi2(df_a, 'mensie mesta'))\n",
+    "print(chi2(df_a, 'obce'))\n",
+    "print(df_a['Okolí']/df_a.loc['total']['Okolí'])\n"
    ]
   },
   {
@@ -324,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {
     "id": "kkNLTn8aVPIi"
    },
@@ -515,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
